--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   json_annotation: ^4.9.0
   intl: ^0.20.2
   shared_preferences: ^2.2.2
+  path_provider: ^2.1.2
+  open_filex: ^4.7.0
 
 dev_dependencies:
   flutter_test:
