Comments added, not done, needs UI | Editing on ODS | Relationships great

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,12 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
+org.gradle.vfs.watch=false
+org.gradle.unsafe.watch-fs=false
+org.gradle.native=false
+org.gradle.parallel=false
+org.gradle.workers.max=1
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+kotlin.compiler.execution.strategy=in-process
