--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,17 @@ dependencies:
   file_picker: ^10.2.0
   provider: ^6.1.5
   json_annotation: ^4.9.0
-  intl: ^0.20.2
+  intl: ^0.19.0                     # Downgraded for compatibility
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
   open_filex: ^4.7.0
+  
+  # Document Preview Dependencies
+  flutter_pdfview: ^1.3.2          # PDF preview
+  photo_view: ^0.15.0              # Image zoom/pan
+  syncfusion_flutter_pdfviewer: ^27.2.5  # Alternative PDF viewer with better controls
+  webview_flutter: ^4.10.0         # For HTML/text files
+  flutter_widget_from_html: ^0.15.2  # HTML rendering
 
 dev_dependencies:
   flutter_test:
