--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m
 android.useAndroidX=true
 android.enableJetifier=true
 
-org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
+org.gradle.java.home=D:\JDK 17
 org.gradle.vfs.watch=false
 org.gradle.unsafe.watch-fs=false
 org.gradle.native=false
