Check release notes on QA Test Log for v1.1

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
     - assets/alignsyslogo.png
     - assets/TechEdgeLogo.png
     - assets/alignsysop.png 
+    - assets/alignsysnew.png
     # You can add more assets or use a folder:
     # - assets/
 
